--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: DYJ
 SEOTitle: 董彦杰 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: woaidongyanjie@gmail.com
-description: "Every failure is leading towards success."
+description: "Love you forever."
 keyword: "BY, BY Blog, 董彦杰的博客, 董彦杰, DYJ"
 url: "http://shagody.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -11,7 +11,7 @@ github_repo: "https://github.com/shagody/shagody.github.io.git" # you code repos
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "If no way,just do it."
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -19,9 +19,9 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
+zhihu_username:     
 github_username:    shagody
-facebook_username:  baiying.qiu.7
+#facebook_username:  baiying.qiu.7
 jianshu_username:   e71990ada2fd
 #twitter_username:   qiubaiying
 
@@ -62,8 +62,8 @@ kramdown:
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
+  clientID: 7746de5b98c86ba8c445                            #生成的clientID
+  clientSecret: ceb81f4ea6adf8c3cfe5e9cb476df137e2c27527    #生成的clientSecret
   repo: shagody.github.io    #仓库名称
   owner: shagody    #github用户名
   admin: shagody
