--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: DYJ
+title: DYJ Blog
 SEOTitle: 董彦杰 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: woaidongyanjie@gmail.com
-description: "Love you forever."
+description: "Hey,LLC."
 keyword: "BY, BY Blog, 董彦杰的博客, 董彦杰, DYJ"
 url: "http://shagody.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -19,13 +19,8 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     
+# zhihu_username:     
 github_username:    shagody
-#facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
-
-
 
 
 # Build settings
@@ -99,12 +94,6 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
         title: "Apple",
         href: "https://apple.com"
     },{
